// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueFilingDialog render closed 1`] = `
<StyledWithResponsiveMode
  className="issue-filing-dialog"
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "subTextId": "issue-filing-dialog-subtext",
      "title": "Specify issue filing location",
      "titleId": "issue-filing-dialog-title",
      "type": 0,
    }
  }
  hidden={true}
  modalProps={
    Object {
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`IssueFilingDialog render open 1`] = `
<StyledWithResponsiveMode
  className="issue-filing-dialog"
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "subTextId": "issue-filing-dialog-subtext",
      "title": "Specify issue filing location",
      "titleId": "issue-filing-dialog-title",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;
